# npp-sql

./: CMakeLists.txt  README.md  install.cmd
src/: app.cpp  app.h
src/framework/: Notepad_plus_msgs.h  NppPluginDemo.cpp  PluginDefinition.cpp  PluginDefinition.h  PluginInterface.h  Scintilla.h  menuCmdID.h
src/sql/: sql.cpp  sql.h
